--- a/app/src/main/res/drawable/ic_surrounding_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_surrounding_black_24dp.xml
@@ -1,9 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <!-- 위치 핀 (Material Symbols : location_on) -->
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:pathData="M12,2
+                          C8.13,2 5,5.13 5,9
+                          c0,5.25 7,13 7,13
+                          s7,-7.75 7,-13
+                          c0,-3.87 -3.13,-7 -7,-7
+                          z
+                          M12,11.5
+                          c-1.38,0 -2.5,-1.12 -2.5,-2.5
+                          s1.12,-2.5 2.5,-2.5
+                          2.5,1.12 2.5,2.5
+                          -1.12,2.5 -2.5,2.5
+                          z"/>
 </vector>
