--- a/app/src/main/res/layout/fragment_surrounding.xml
+++ b/app/src/main/res/layout/fragment_surrounding.xml
@@ -30,11 +30,11 @@
         android:layout_marginBottom="18dp">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_filter_restaurant"
+            android:id="@+id/btn_filter_biz"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="음식점"
+            android:text="상권"
             app:iconGravity="textStart"
             app:iconPadding="4dp"
             app:cornerRadius="16dp"
@@ -44,11 +44,11 @@
             />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_filter_cafe"
+            android:id="@+id/btn_filter_util"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="카페"
+            android:text="편의 시설"
             app:iconGravity="textStart"
             app:iconPadding="4dp"
             app:cornerRadius="16dp"
@@ -58,11 +58,11 @@
             />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_filter_toilet"
+            android:id="@+id/btn_filter_tourist"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="화장실"
+            android:text="관광지"
             app:iconGravity="textStart"
             app:iconPadding="4dp"
             app:cornerRadius="16dp"
