--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,8 +29,15 @@
     <fragment
         android:id="@+id/navigation_course_detail"
         android:name="com.lumi.android.bicyclemap.ui.course.CourseDetailFragment"
-        android:label="Course Detail"
+        android:label="@string/title_course_detail"
         tools:layout="@layout/fragment_course_detail" >
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_setting"
+        android:name="com.lumi.android.bicyclemap.ui.setting.SettingFragment"
+        android:label="@string/title_setting"
+        tools:layout="@layout/fragment_setting" >
     </fragment>
 
 </navigation>
