--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_tour"
+        android:icon="@drawable/ic_surrounding_black_24dp"
+        android:title="@string/title_tour" />
+
+    <item
         android:id="@+id/navigation_surrounding"
         android:icon="@drawable/ic_surrounding_black_24dp"
         android:title="@string/title_surrounding" />
