--- a/app/src/main/res/layout/fragment_course.xml
+++ b/app/src/main/res/layout/fragment_course.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:text="한옥마을 산책길" />
+            android:text="한옥마을" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_view"
